# llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eval-gate.yml
data/: ANNOTATION_GUIDELINES.md  baseline_scores.json  grounded_qa.jsonl  grounded_qa_regressed.jsonl
reports/: calibration_report_lexical.json  calibration_report_lexical.md  calibration_report_mock.json  calibration_report_mock.md
src/evalharness/: __init__.py  calibration.py  cli.py  dataset.py  judge.py  metrics.py  regression.py  report.py  rubric.py
src/evalharness/backends/: __init__.py  anthropic_backend.py  base.py  lexical.py  mock.py
tests/: test_calibration.py  test_cli.py  test_dataset.py  test_judge.py  test_metrics.py  test_regression.py
